[gd_scene load_steps=8 format=1]

[ext_resource path="res://scenes/character/boruga/oruga.gd" type="Script" id=1]
[ext_resource path="res://sprites/enemigo/bichoOruga/bichooruga.png" type="Texture" id=2]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 30, 10 )

[sub_resource type="Animation" id=2]

resource/name = "attack"
length = 2.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8 ),
"transitions": FloatArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7, 8, 9, 10, 7, 8, 9, 10 ]
}

[sub_resource type="Animation" id=3]

resource/name = "down"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.5, 0.8 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 6, 5, 4, 3 ]
}

[sub_resource type="Animation" id=4]

resource/name = "move"
length = 1.2
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.3, 0.6, 0.9 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1 ]
}

[sub_resource type="CapsuleShape2D" id=5]

custom_solver_bias = 0.0
radius = 10.0
height = 64.0

[node name="oruga" type="KinematicBody2D"]

input/pickable = false
shapes/0/shape = SubResource( 1 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 0 )
shapes/0/trigger = false
collision/layers = 2
collision/mask = 1
collision/margin = 0.08
script/script = ExtResource( 1 )
MAX_SPEED = 20.0
ACCELERATION = 100.0
DECELERATION = 2000
JUMP_FORCE = 800
GRAVITY = -2000.0
MAX_FALL_SPEED = 1000
dir = null
timer_path = NodePath("timer")
sprite_path = NodePath("Sprite")
anim_path = NodePath("animplayer")
raycast_l_path = NodePath("raycast_l")
raycast_r_path = NodePath("raycast_r")
raycast_d_l_path = NodePath("raycast_d_l")
raycast_d_r_path = NodePath("raycast_d_r")
speedx = 10.0

[node name="Sprite" type="Sprite" parent="."]

transform/pos = Vector2( 0, 21 )
texture = ExtResource( 2 )
vframes = 4
hframes = 3
frame = 10

[node name="collision" type="CollisionShape2D" parent="."]

shape = SubResource( 1 )
trigger = false
_update_shape_index = 0

[node name="animplayer" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/attack = SubResource( 2 )
anims/down = SubResource( 3 )
anims/move = SubResource( 4 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="timer" type="Timer" parent="."]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="raycast_l" type="RayCast2D" parent="."]

transform/pos = Vector2( -2, -5 )
enabled = true
cast_to = Vector2( -35, 0 )
layer_mask = 1
type_mask = 15

[node name="raycast_r" type="RayCast2D" parent="."]

transform/pos = Vector2( 2, -5 )
enabled = true
cast_to = Vector2( 35, 0 )
layer_mask = 1
type_mask = 15

[node name="raycast_d_l" type="RayCast2D" parent="."]

transform/pos = Vector2( -33, -6 )
enabled = true
cast_to = Vector2( 0, -15 )
layer_mask = 1
type_mask = 15

[node name="raycast_d_r" type="RayCast2D" parent="."]

transform/pos = Vector2( 34, -6 )
enabled = true
cast_to = Vector2( 0, -15 )
layer_mask = 1
type_mask = 15

[node name="attack" type="Area2D" parent="."]

input/pickable = true
shapes/0/shape = SubResource( 5 )
shapes/0/transform = Matrix32( 1, 0, 0, 1, 0, 52 )
shapes/0/trigger = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0

[node name="collision" type="CollisionShape2D" parent="attack"]

transform/pos = Vector2( 0, 52 )
shape = SubResource( 5 )
trigger = true
_update_shape_index = 0

[connection signal="timeout" from="timer" to="." method="_on_timer_timeout"]

[connection signal="body_enter" from="attack" to="." method="_on_attack_body_enter"]

[connection signal="body_exit" from="attack" to="." method="_on_attack_body_exit"]


